# applescript-folder-commands

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
ci/: create_post-commit.sh  run_git_tag_base_pyproject.py
scripts/Git/: README.md
scripts/Git/ghRepoClone.workflow/Contents/: Info.plist  document.wflow
scripts/Git/ghRepoCloneBranch.workflow/Contents/: Info.plist  document.wflow
scripts/Git/ghRepoCloneBranchByTopic.workflow/Contents/: Info.plist  document.wflow
scripts/Git/gitPull.workflow/Contents/: Info.plist  document.wflow
scripts/QuickTime/: README.md
scripts/QuickTime/show_grid_qt.workflow/Contents/: Info.plist  document.wflow
scripts/VSCode/: README.md
scripts/VSCode/actVSCode.workflow/Contents/: Info.plist  document.wflow
